# bnb-host-tools

./: .flake8  .gitignore  CHANGELOG.md  README.md  TODO.md  main.py  pyproject.toml  workflow.md
.github/workflows/: run.yml  setup.yml  validate-PR.yml
services/: test_regexp.py
services/calendar/: calendar_services.py
services/dataviz/: README.md  TODO.md
services/dataviz/data/: df_blocked_days_cache.csv  df_notion_cache.csv
services/dataviz/script/: setup_notion_db.sh
services/dataviz/src/: app.py  get_blocked_days.py
services/dataviz/utils/: cache.py  data_fetch.py  plotting.py
services/gmail_services/: gmail_services.py  gmail_services_V2.py
services/google_calendar/: calendar_services.py
services/google_integration/: calendar_services.py  gmail_services.py
services/mail_processing/: mail_processor.py  parser.py  test_regexp.py
services/notion_client/: notion_api_client.py  notion_client.py  setup_database.sh
services/oauth_credentials/: __init__.py  authentification.py  config_creds.py
services/parser/: parser.py
tests/integration/: README.md  test_calendar_services.py  test_mail_processor.py
tests/unit/: test_calendar_services.py  test_get_blocked_days.py  test_gmail_services.py  test_notion_api_client.py  test_parser.py
utils/: retreive_date.sh
